2007-02-13  Release Manager

	* GCC 4.1.2 released.

2007-02-06  Mark Mitchell  <mark@codesourcery.com>

	PR target/29487
	* decl.c (finish_function): Use DECL_REPLACEABLE.
	* tree.c (cp_cannot_inline_tree_fn): Likewise.

2007-01-28  Andrew Pinski  <pinskia@gmail.com>

	PR C++/28988
	* semantics.c (finish_pseudo_destructor_expr): Check the
	destrutor name by calling check_dtor_name.

2007-01-10  Mark Mitchell  <mark@codesourcery.com>

	PR c++/28999
	* decl.c (make_typename_type): If the qualified name is not a
	type, issue an error.

2007-01-05  Jakub Jelinek  <jakub@redhat.com>

	PR c++/30382
	Backported from mainline
	2006-06-29  Jason Merrill  <jason@redhat.com>
	* parser.c (cp_parser_enum_specifier): Return early if
	type is error_mark_node.

2007-01-03  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2006-07-12  Jason Merrill  <jason@redhat.com>
	PR c++/28217
	* semantics.c (note_decl_for_pch): Don't premangle templates.

2007-01-03  Jakub Jelinek  <jakub@redhat.com>

	PR c++/29054
	* decl.c (revert_static_member_fn): Don't remove first
	argument without checking it is "this".

	PR c++/29535
	Backported from mainline
	2006-10-17  Mark Mitchell  <mark@codesourcery.com>
	PR c++/28261
	* parser.c (cp_lexer_next_token_is_decl_specifier_keyword): New
	function.
	(cp_parser_constructor_declarator_p): Use it.
	(cp_parser_check_type_definition): Return a value indicating
	whether or not the definition is valid.
	(cp_parser_enum_specifier): Skip invalid enum definitions.

2006-12-10  Mark Mitchell  <mark@codesourcery.com>

	PR c++/29732
	* cp-tree.h (DECL_USE_TEMPLATE): Mention partial specializations.
	(explicit_class_specialization_p): Declare.
	* pt.c (explicit_class_specialization_p): New function.
	* parser.c (cp_parser_init_declarator): Check correct number of
	template parameters for in-class function definitions.
	(cp_parser_check_declarator_template_parameters): Stop looking for
	template classes when we find an explicit specialization.
